package model;

public enum SetMenu {
    Breakfast,
    Lunch,
    Dinner;

}
